additional work to fix the collapsed margin on top of screen as well as the big white space at the end of the website

--- a/_sass/defaults.scss
+++ b/_sass/defaults.scss
@@ -85,9 +85,9 @@ ol>li>ol, ol>li>ul, ul>li>ol, ul>li>ul {
   margin: 0;
 }
 
-// main {
-//   overflow: hidden;
-// }
+main {
+  overflow: hidden;
+}
 
 // device width (use bootstrap)
 //$xtra-large: none !default;
