--- a/_sass/home/_footer.scss
+++ b/_sass/home/_footer.scss
@@ -1,6 +1,7 @@
 footer {
   padding: 0 0 30px 0;
   position: relative;
+  margin-top: 80px;
   p, a, li {
     font-family: $sans-serif;
     font-size: 0.8rem;
@@ -16,12 +17,12 @@ footer {
 }
 
 .footer_skew {
-  top: 80px;
+  //margin-top: 80px;
   position: absolute;
   width: 100%;
   height: 100%;
   background: white;;
-  transform-origin: bottom right;
+  transform-origin: top right;
   z-index: 1;
   transform: skewY(5.4deg);
   @include media-query($small){
@@ -51,10 +52,10 @@ footer.dark .footer_skew {
 }
 
 .footer_high {
-  padding-top: 120px;
+  padding-top: 40px;
   margin-top: -80px;
   @include media-query($small){
-    padding-top: 80px;
+    padding-top: 0px;
   };
 }
 
